# somnium

./: .gitignore  CMakeLists.txt  Cargo.toml  vcpkg.json
examples/: find_songs.rs  play_sound.rs
src/: assets.rs  audio_player.cpp  audio_player.h  constants.rs  file_browser.cpp  file_browser.h  lib.rs  main.cpp  main.rs  themes.rs
src/component/: custom_menu.cpp  custom_menu.h
src/components/: mod.rs  song_card.rs  song_list.rs
src/error/: error_list.cpp  error_list.h
src/models/: mod.rs  song_info.rs
src/modules/audio_player/: audio_player.cpp  audio_player.cppm
src/playback/: commands.rs  events.rs  mod.rs  player.rs  service.rs  state.rs
src/services/playback/: mod.rs  player.rs  player_core.rs  service.rs
src/utils/: find_songs.rs  mod.rs
src/views/: main_view.rs
